--- a/src/app/cmps/stay-list/stay-list.component.scss
+++ b/src/app/cmps/stay-list/stay-list.component.scss
@@ -57,4 +57,7 @@
       outline: 1px solid #333;
     }
   }
+  @include for-mobile-layout {
+    padding-inline: 1em;
+  }
 }
