--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -88,7 +88,7 @@
 
   @include for-mobile-layout {
     width: 100%;
-    height: 100%;
+    margin-block-start: 1em;
   }
 
   &.map-active {
