--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -37,7 +37,7 @@ $gradient1: radial-gradient(
   #bd1e59 100%
 );
 $shadow1: 0 1px 2px rgba(0, 0, 0, 0.08), 0 4px 12px rgba(0, 0, 0, 0.05);
-
+$scrollbar-width: 8px;
 :root {
   --perspective: 1000px;
   --camera-dolly: 0px;
